BusOne/src/objects/Survey_vod__c.object
<CustomObject>
    <description>Contains the header information for the survey.</description>
    <fields>
        <fullName>Account_Types_vod__c</fullName>
        <description>The types of accounts that can be included in this survey.</description>
        <label>Account Types</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assignment_Type_vod__c</fullName>
        <description>•Territory only – System assigns a user based on territory
•Product &amp; Territory – System assigns a user based on territory and product</description>
        <label>Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Territory_vod</fullName>
                </value>
                <value>
                    <fullName>Product_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Autotarget_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, targets will automatically be created based on the selected territories and products. Supports the Territories_vod long text area field (not the Territory_vod text field).</description>
        <label>Automatically create target records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channels_vod__c</fullName>
        <description>Channels where this survey can be deployed.  At least one channel must be selected for users to be able to answer a survey.</description>
        <label>Channels</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the product group to which this Survey is aligned.</description>
        <label>Detail Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Surveys (Detail Group)</relationshipLabel>
        <relationshipName>Surveys_Detail_Group_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enable_Employee_Comment_vod__c</fullName>
        <description>Admins use this picklist when designing an Advanced Coaching Report to select whether Employees should be able to comment on an Advanced Coaching Report, and if yes, is the Employee Comment required.</description>
        <label>Enable Employee Comment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disabled_vod</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Comment_Optional_vod</fullName>
                </value>
                <value>
                    <fullName>Comment_Required_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>On the end date, the survey will be complete and no new submissions will be accepted.</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expired_vod__c</fullName>
        <description>If current date &gt; End_Date_vod (on the Survey record), the survey is considered expired</description>
        <formula>IF(End_Date_vod__c &lt; TODAY(),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expired</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is used for data loading only.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Language_vod__c</fullName>
        <description>The language this survey is conducted in.  If user does not have access to this field, all surveys created by that user are assumed to be in the user’s language.</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>zh_CN</fullName>
                </value>
                <value>
                    <fullName>zh_TW</fullName>
                </value>
                <value>
                    <fullName>cs</fullName>
                </value>
                <value>
                    <fullName>da</fullName>
                </value>
                <value>
                    <fullName>nl_NL</fullName>
                </value>
                <value>
                    <fullName>en_US</fullName>
                </value>
                <value>
                    <fullName>fi</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>el</fullName>
                </value>
                <value>
                    <fullName>hu</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>ko</fullName>
                </value>
                <value>
                    <fullName>pl</fullName>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                </value>
                <value>
                    <fullName>ru</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>es_MX</fullName>
                </value>
                <value>
                    <fullName>sv</fullName>
                </value>
                <value>
                    <fullName>th</fullName>
                </value>
                <value>
                    <fullName>tr</fullName>
                </value>
                <value>
                    <fullName>vi</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If locked, an assessment header cannot be edited.</description>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Score_vod__c</fullName>
        <description>Maximum possible score on a survey.</description>
        <label>Maximum Possible Score</label>
        <summarizedField>Survey_Question_vod__c.Max_Score_vod__c</summarizedField>
        <summaryForeignKey>Survey_Question_vod__c.Survey_vod__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Min_Score_vod__c</fullName>
        <description>Minimum possible score on a survey.</description>
        <label>Minimum Possible Score</label>
        <summarizedField>Survey_Question_vod__c.Min_Score_vod__c</summarizedField>
        <summaryForeignKey>Survey_Question_vod__c.Survey_vod__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, any user can complete the survey for any account they have visibility for. Limits can be set on which users can complete the survey by entering a territory value in the Territory_vod field.</description>
        <label>Allow users to choose targets?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product that the survey is for. Note - this lookup is filtered to show only detail products.</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product_vod__c.Product_Type_vod__c</field>
                <operation>equals</operation>
                <value>Detail, Detail Group, Detail Topic</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Name_vod__c</fullName>
        <description>Name of the profile to which this Survey is bound.</description>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_vod__c</fullName>
        <description>The geographic region where the survey is conducted.</description>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Display_vod__c</fullName>
        <description>Setting which indicates score display</description>
        <label>Score Display</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Question_Max_Score_vod</fullName>
                </value>
                <value>
                    <fullName>Response_Score_vod</fullName>
                </value>
                <value>
                    <fullName>Survey_Max_Score_vod</fullName>
                </value>
                <value>
                    <fullName>Survey_Score_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment_vod__c</fullName>
        <description>List of segments and min / max scoring rules.  Segments are based on the sum of an account’s response scores.  Segments are limited to 10 entries.  Example: Late Adopter; 0; 50; Early Adopter; 51; 100;</description>
        <label>Segments</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Share_Team_vod__c</fullName>
        <description>Share Team value used to specify users via User.Share_Team_vod who will see this Survey.</description>
        <label>Share Team</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>On the start date, the survey will become editable by assigned reps.</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>•Development – survey is in development
•Publishing - the publish batch process is currently running
•Published – development is complete, records have been created and are visible to users</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Development_vod</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Publishing_vod</fullName>
                </value>
                <value>
                    <fullName>Published_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territories_vod__c</fullName>
        <description>Allows selection of multiple territories when creating a survey. When publishing a survey, only users in these territories will be selected for target assignment. On open surveys, only users within these territories will be able to select their own targets.</description>
        <label>Included user territories:</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Territory_vod__c</fullName>
        <description>Select a territory node to determine which users will be able to complete a survey. This should be the name of a single territory, and will include all territories below this territory in the hierarchy.</description>
        <label>Included user territories:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iFrame_LandingPage_URL_vod__c</fullName>
        <description>URL of the custom webpage which hosts the Survey iFrame. If this field is blank, then default to the Veeva hosted site.</description>
        <label>iFrame Landing Page URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zvod_Advanced_Share_Team_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to display the sharing team established via advanced sharing associated to the Survey.</description>
        <label>zvod_Advanced_Share_Team_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Questions_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field for displaying the questions section on the survey management page.</description>
        <label>zvod_Questions_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Segments_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field for displaying the segments section on the survey management page.</description>
        <label>zvod_Segments_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Targets_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field for displaying the targets section on the survey management page.</description>
        <label>zvod_Targets_vod</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date_vod__c</columns>
        <columns>End_Date_vod__c</columns>
        <columns>Status_vod__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <recordTypes>
        <fullName>Coaching_Report_vod</fullName>
        <active>true</active>
        <description>Used for internal coaching reports.</description>
        <label>Coaching_Report_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_Survey_vod</fullName>
        <active>true</active>
        <description>Event Survey</description>
        <label>Event_Survey_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>One_Time_vod</fullName>
        <active>true</active>
        <description>One-Time surveys can be submitted once per account.</description>
        <label>One_Time_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recurring_vod</fullName>
        <active>true</active>
        <description>Recurring surveys can be submitted multiple times before the end date, with each submission counting as a new record.</description>
        <label>Recurring_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Suggestion_Survey_vod</fullName>
        <active>true</active>
        <description>Used to support the Suggestion Survey feature.</description>
        <label>Suggestion_Survey_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Survey_vod</fullName>
        <active>true</active>
        <description>Used for surveying employees.</description>
        <label>User_Survey_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>VEEVA_ADVANCED_SHARE_vod__c</fullName>
        <label>VEEVA_ADVANCED_SHARE_vod</label>
    </sharingReasons>
    <validationRules>
        <fullName>End_Date_After_Start_Date</fullName>
        <active>true</active>
        <description>Survey end date must be later than start date, otherwise SURVEY_END_DATE_ERROR appears under the save / cancel buttons.</description>
        <errorConditionFormula>End_Date_vod__c &lt; Start_Date_vod__c</errorConditionFormula>
        <errorMessage>The end date must be later than the start date.</errorMessage>
    </validationRules>
</CustomObject>